# ddd-amazon-q-developer

./: .gitignore  README.md
task-management-app/backend/: .gitignore  .pre-commit-config.yaml  .ruff.toml  Makefile  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
task-management-app/backend/application/dtos/: task_dto.py
task-management-app/backend/application/use_cases/: task_use_cases.py
task-management-app/backend/domain/entities/: task.py
task-management-app/backend/domain/repositories/: task_repository.py
task-management-app/backend/domain/services/: task_service.py
task-management-app/backend/domain/value_objects/: task_status.py
task-management-app/backend/infrastructure/auth/: cognito_auth_service.py
task-management-app/backend/infrastructure/persistence/: dynamodb_task_repository.py
task-management-app/backend/interfaces/api/: task_api.py
task-management-app/backend/interfaces/handlers/: lambda_handler.py
task-management-app/backend/scripts/: format_code.sh  lint_check.sh  run_tests.sh  setup_dev.sh
task-management-app/backend/tests/application/: test_task_use_cases.py
task-management-app/backend/tests/domain/: test_task.py
task-management-app/backend/tests/infrastructure/persistence/: test_dynamodb_task_repository.py
task-management-app/backend/tests/interfaces/api/: test_task_api.py
task-management-app/frontend/: README.md  package-lock.json  package.json
task-management-app/frontend/public/: index.html  manifest.json
task-management-app/frontend/src/: App.css  App.js  aws-exports.js  index.js
task-management-app/frontend/src/components/: TaskForm.js  TaskList.js
task-management-app/frontend/src/pages/: TaskPage.js
task-management-app/frontend/src/services/: api.js
task-management-app/infrastructure/: README.md  samconfig.toml  template.yaml
